Add getDevice operation
